--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,48 @@
 .app {
   text-align: center;
+  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-weight: 600;
+  font-size: 1.4rem;
+  color: var(--black);
+}
+
+.app__title {
+  margin-bottom: 3rem;
+}
+
+.workbench {
+  display: flex;
+  justify-content: center;
+  gap: 5rem;
+  width: 100%;
+}
+
+.workbench__controls {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  text-align: left;
   border: 1px solid #ccc;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.workbench__preview {
+  border: 1px solid #ccc;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.workbench__textarea {
+  width: 100%;
+  height: 3rem;
+  padding: 5px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+}
+
+main {
+  margin: 0 auto;
+  max-width: 700px;
 }
