--- a/src/index.css
+++ b/src/index.css
@@ -6,14 +6,15 @@
   margin: 0;
 }
 
+html {
+  font-size: 72.5%;
+}
+
 :root {
   --black: #242424;
 }
 
 body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   min-height: 100dvh;
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
