--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,11 @@
   margin-bottom: 3rem;
 }
 
+main {
+  margin: 0 auto;
+  max-width: 700px;
+}
+
 .workbench {
   display: flex;
   justify-content: center;
@@ -41,8 +46,31 @@
   border: 1px solid #ccc;
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
-
-main {
-  margin: 0 auto;
-  max-width: 700px;
+.workbench__input-radius,
+.workbench__input-padding {
+  width: 4rem;
+  height: 3rem;
+  padding: 5px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
+
+.workbench__button-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100px;
+}
+
+.workbench__button {
+  cursor: pointer;
+}
+
+/* .workbench__input-radius::after {
+  content: "px";
+  font-size: 0.8rem;
+  color: #999;
+  margin-left: 0.5rem;
+} */
