--- a/src/App.css
+++ b/src/App.css
@@ -94,6 +94,28 @@ main {
   fill: #464646;
 }
 
+.workbench__input-color {
+  display: flex;
+  justify-content: space-between;
+  gap: 0.5rem;
+}
+
+.workbench__font-color-preview, .workbench__background-color-preview {
+  font-size: 1rem;
+  width: 9rem;
+  border: 1px solid #ccc;
+  display: inline-block;
+  margin-left: 0.5rem;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+input[type="color"] {
+  width: 3rem;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
 /* .workbench__input-radius::after {
   content: "px";
   font-size: 0.8rem;
