--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,9 @@ html {
 body {
   min-height: 100dvh;
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 textarea {
