--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,56 @@
 .app {
   text-align: center;
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: var(--font-family);
   font-weight: 600;
   font-size: 1.4rem;
-  color: var(--black);
+  color: var(--color-text-black);
 }
 
 .app__title {
-  margin-bottom: 3rem;
-  font-size: 5rem;
+  font-size: 6rem;
+  line-height: 1;
+  margin-bottom: 5rem;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.app__title-span-1,
+.app__title-span-3 {
+  position: relative;
+  padding: 0 2rem;
+  color: var(--color-purple);
+  text-shadow: 0 0 2px var(--color-text-white), 0 0 5px var(--color-purple),
+    0 0 4px var(--color-purple);
+}
+
+.app__title-span-1::before,
+.app__title-span-1::after,
+.app__title-span-3::before,
+.app__title-span-3::after {
+  color: var(--color-purple);
+  content: "";
+  position: absolute;
+  right: 0;
+  left: 0;
+  height: calc(40% - 5px);
+  border: 4px solid var(--color-purple);
+}
+
+.app__title-span-1::before,
+.app__title-span-3::before {
+  border-bottom-width: 0;
+}
+
+.app__title-span-1::after,
+.app__title-span-3::after {
+  bottom: 0;
+  border-top-width: 0;
+}
+
+.app__title-span-2 {
+  padding: 0 2rem;
+  background-color: var(--color-background);
+  color: var(--color-text-white);
+  border-radius: 19px;
 }
 
 main {
@@ -19,7 +61,7 @@ main {
 .workbench {
   display: flex;
   justify-content: center;
-  gap: 5rem;
+  gap: 2rem;
   width: 100%;
 }
 
@@ -31,12 +73,14 @@ main {
   border: 1px solid #ccc;
   padding: 5px;
   border-radius: 5px;
+  box-shadow: 0 0 16px rgba(0, 0, 0, 0.3);
 }
 
 .workbench__preview {
   border: 1px solid #ccc;
   padding: 5px;
   border-radius: 5px;
+  box-shadow: 0 0 16px rgba(0, 0, 0, 0.3);
 }
 
 .workbench__textarea {
@@ -103,7 +147,8 @@ main {
   gap: 0.5rem;
 }
 
-.workbench__font-color-preview, .workbench__background-color-preview {
+.workbench__font-color-preview,
+.workbench__background-color-preview {
   font-size: 1rem;
   width: 9rem;
   border: 1px solid #ccc;
@@ -119,7 +164,8 @@ input[type="color"] {
   border: 1px solid #ccc;
 }
 
-.workbench__text-padding-y, .workbench__text-padding-x {
+.workbench__text-padding-y,
+.workbench__text-padding-x {
   display: flex;
   justify-content: flex-start;
   align-items: center;
