--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ html {
 }
 
 :root {
-  --color-background: #ff0000;
+  --color-background-red: #ff0000;
   --color-violet: #410445;
   --color-purple: #a5158c;
   --color-pink: #ff2df1;
