--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   text-align: center;
   font-family: var(--font-family);
   font-weight: 600;
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   color: var(--color-text-black);
 }
 
@@ -55,13 +55,13 @@
 
 main {
   margin: 0 auto;
-  max-width: 700px;
+  max-width: fit-content;
 }
 
 .workbench {
   display: flex;
   justify-content: center;
-  gap: 2rem;
+  gap: 5rem;
   width: 100%;
 }
 
@@ -70,23 +70,26 @@ main {
   flex-direction: column;
   gap: 0.5rem;
   text-align: left;
+  width: 20rem;
   border: 1px solid #ccc;
-  padding: 5px;
+  padding: 1rem;
   border-radius: 5px;
   box-shadow: 0 0 16px rgba(0, 0, 0, 0.3);
+  background-color: var(--color-text-white);
 }
 
 .workbench__preview {
   border: 1px solid #ccc;
-  padding: 5px;
+  padding: 1rem;
   border-radius: 5px;
   box-shadow: 0 0 16px rgba(0, 0, 0, 0.3);
+  background-color: var(--color-text-white);
 }
 
 .workbench__textarea {
   width: 100%;
   height: 3rem;
-  padding: 5px;
+  padding: 0.5rem;
   border-radius: 5px;
   border: 1px solid #ccc;
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -99,7 +102,7 @@ main {
 .workbench__input-padding-x {
   width: 5rem;
   height: 3rem;
-  padding: 5px;
+  padding: 0.5rem;
   border-radius: 5px;
   border: 1px solid #ccc;
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -154,7 +157,7 @@ main {
   border: 1px solid #ccc;
   display: inline-block;
   margin-left: 0.5rem;
-  padding: 5px;
+  padding: 0.5rem;
   border-radius: 5px;
 }
 
@@ -197,10 +200,11 @@ input[type="color"] {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, 10%);
+  transform: translate(-50%, 50%);
   opacity: 0;
   color: var(--color-text-white);
   background-color: var(--color-text-black);
+  border-radius: 5px;
   pointer-events: none;
   transition: all 0.1s ease-in-out;
 }
@@ -208,7 +212,21 @@ input[type="color"] {
 .footer__icon:hover::after {
   opacity: 1;
   pointer-events: none;
-  border-radius: 5px;
   padding: 0 0.5rem;
   transform: translate(-50%, 100%);
+}
+
+.label {
+  border: 1px solid #ccc;
+  padding: 0 0.5rem;
+  border-radius: 5px;
+  width: fit-content;
+  background-color: var(--color-violet);
+  color: var(--color-text-white);
+  margin: 0.5rem 0;
+}
+
+.workbench__padding-wrapper {
+  display: flex;
+  justify-content: space-between;
 }
