--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,10 @@ textarea {
   border-radius: 5px;
   padding: 4px;
 }
+
+@media screen and (max-width: 1440px) {
+  body {
+    height: auto;
+    padding: 5rem;
+  }
+}
