--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ html {
   --color-background-red: #ff0000;
   --color-violet: #410445;
   --color-purple: #a5158c;
+  --color-cyan-light: #60daff45;
   --color-pink: #ff2df1;
   --color-yellow: #f6dc43;
   --color-text-black: #242424;
