--- a/src/App.css
+++ b/src/App.css
@@ -99,7 +99,8 @@ main {
 .workbench__input-font-weight,
 .workbench__input-font-size,
 .workbench__input-padding-y,
-.workbench__input-padding-x {
+.workbench__input-padding-x,
+.workbench__input-border {
   width: 5rem;
   height: 3rem;
   padding: 0.5rem;
