--- a/src/App.css
+++ b/src/App.css
@@ -152,7 +152,8 @@ main {
 }
 
 .workbench__font-color-preview,
-.workbench__background-color-preview {
+.workbench__background-color-preview,
+.workbench__border-color-preview {
   font-size: 1rem;
   width: 9rem;
   border: 1px solid #ccc;
