--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,26 @@
   color: var(--color-text-black);
 }
 
+.theme-button {
+  display: flex;
+  justify-content: flex-end;
+  /* background-color: rgb(88, 88, 88); */
+}
+
+.theme-button__icon-bg {
+  width: 40px;
+  height: 20px;
+  border-radius: 10px;
+  background-color: #4c43f8;
+}
+
+.theme-button__icon-circle {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: red;
+}
+
 .app__title {
   font-size: 6rem;
   line-height: 1;
