--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
   font-weight: 600;
   font-size: 1.6rem;
   color: var(--color-text-black);
+  height: 100dvh;
+  padding: 10rem;
+  font-family: var(--font-system-ui);
+  background-color: var(--color-background-white);
 }
 
 .theme-button {
@@ -21,7 +25,7 @@
   border-radius: 10px;
   cursor: pointer;
   background-color: #939393;
-  box-shadow: 0px 0px 0px 2px #c2c2c2;
+  box-shadow: 0px 0px 0px 2px var(--color-background-gray);
 }
 
 .theme-button__icon-circle {
@@ -34,7 +38,7 @@
 }
 
 .right {
-  left: 10px;
+  right: 0;
 }
 
 .theme-button__moon,
@@ -91,6 +95,7 @@
 
 .workbench {
   display: flex;
+  justify-content: center;
   gap: 3rem;
   width: 100%;
 }
@@ -231,7 +236,7 @@ input[type="color"] {
   padding: 0 0.5rem;
   border-radius: 5px;
   width: fit-content;
-  background-color: var(--color-cyan-light);
+  background-color: var(--color-background-cyan-light);
   margin: 0.5rem 0;
 }
 
@@ -293,4 +298,10 @@ input[type="color"] {
 
 .workbench__box-shadow-spread-span {
   width: 100px;
+}
+
+@media screen and (min-width: 1366px) {
+  .app {
+    height: auto;
+  }
 }
