--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,10 @@
   font-weight: 600;
   font-size: 1.6rem;
   color: var(--color-text-black);
-  height: 100dvh;
   padding: 10rem;
   font-family: var(--font-system-ui);
   background-color: var(--color-background-white);
+  height: 100dvh;
 }
 
 .theme-button {
@@ -15,7 +15,6 @@
   justify-content: flex-end;
   align-items: center;
   gap: 0.5rem;
-  /* background-color: rgb(88, 88, 88); */
 }
 
 .theme-button__icon-bg {
@@ -26,6 +25,7 @@
   cursor: pointer;
   background-color: #939393;
   box-shadow: 0px 0px 0px 2px var(--color-background-gray);
+  transition: all 1s ease-in;
 }
 
 .theme-button__icon-circle {
@@ -33,8 +33,7 @@
   width: 15px;
   height: 15px;
   border-radius: 50%;
-  background-color: #e8e8e8;
-  transition: all 1s ease-in;
+  background-color: var(--color-background-gray-light);
 }
 
 .right {
@@ -300,7 +299,7 @@ input[type="color"] {
   width: 100px;
 }
 
-@media screen and (min-width: 1366px) {
+@media screen and (max-width: 1440px) {
   .app {
     height: auto;
   }
