--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
   font-family: var(--font-system-ui);
   background-color: var(--color-background-white);
   height: 100dvh;
+  transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 }
 
 .theme-button {
@@ -25,19 +26,20 @@
   cursor: pointer;
   background-color: #939393;
   box-shadow: 0px 0px 0px 2px var(--color-background-gray);
-  transition: all 1s ease-in;
 }
 
 .theme-button__icon-circle {
   position: absolute;
+  left: 0;
   width: 15px;
   height: 15px;
   border-radius: 50%;
   background-color: var(--color-background-gray-light);
+  transition: left 0.1s ease-in-out;
 }
 
 .right {
-  right: 0;
+  left: calc(100% - 15px);
 }
 
 .theme-button__moon,
@@ -303,4 +305,11 @@ input[type="color"] {
   .app {
     height: auto;
   }
+}
+
+.parent {
+  width: 200px;
+  height: 200px;
+  position: relative;
+  background-color: red;
 }
