--- a/src/index.css
+++ b/src/index.css
@@ -56,3 +56,25 @@ textarea {
 li {
   list-style: none;
 }
+
+.test {
+  width: 100%;
+  height: 100dvh;
+  border: 5px solid rgb(5, 0, 0);
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-rows: 1fr;
+  gap: 1rem;
+  background-color: red;
+}
+
+.column {
+  border: 5px solid rgb(53, 53, 248);
+  background-color: var(--color-background-gray-light);
+}
+
+.row {
+  border: 5px solid rgb(255, 192, 74);
+  background-color: var(--color-background-gray-light);
+  height: 50%;
+}
