--- a/src/index.css
+++ b/src/index.css
@@ -57,10 +57,10 @@ li {
   list-style: none;
 }
 
-.test {
+/* .test {
   width: 100%;
   height: 100dvh;
-  border: 5px solid rgb(5, 0, 0);
+  border: 5px solid #050000;
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
   grid-template-rows: 1fr;
@@ -77,4 +77,4 @@ li {
   border: 5px solid rgb(255, 192, 74);
   background-color: var(--color-background-gray-light);
   height: 50%;
-}
+} */
