--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.app {
+/* .app {
   text-align: center;
   font-family: var(--font-system-ui);
   font-weight: 600;
@@ -311,4 +311,17 @@ input[type="color"] {
   height: 200px;
   position: relative;
   background-color: red;
+} */
+
+.app {
+  text-align: center;
+  font-weight: 600;
+  font-size: 1.6rem;
+  color: var(--color-text-black);
+  padding: 10rem;
+  font-family: var(--font-system-ui);
+  background-color: var(--color-background-white);
+  height: 100dvh;
+  transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+  border: 1px solid black;
 }
