Update font size component style

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ html {
   --color-purple: #a5158c;
   --color-background-cyan-light: #60daff45;
   --color-text-black: #242424;
+  --color-text-black-light: #767676;
   --color-text-white: #fff;
 
   /* BACKGROUND COLOR */
