--- a/src/components/ChangeFontSize.module.css
+++ b/src/components/ChangeFontSize.module.css
@@ -1,3 +1,18 @@
 .controls__font-size {
   display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 1em;
+  border: 1px solid var(--color-text-black-light);
+  border-radius: 10px;
+  margin: 0 2em;
+  padding: 0.5em 1em;
+}
+
+.controls__label {
+  color: var(--color-text-black-light);
+}
+
+.workbench__input--font-size {
+  width: 100%;
 }
