--- a/src/components/ChangeFontSize.module.css
+++ b/src/components/ChangeFontSize.module.css
@@ -1,18 +1,41 @@
-.controls__font-size {
+.font-size {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 1em;
+  gap: 2rem;
   border: 1px solid var(--color-text-black-light);
   border-radius: 10px;
-  margin: 0 2em;
-  padding: 0.5em 1em;
+  padding: 1rem 1.5rem;
+  margin-bottom: 1rem;
 }
 
-.controls__label {
+.font-size__label {
   color: var(--color-text-black-light);
 }
 
-.workbench__input--font-size {
+.font-size__input-container {
+  display: flex;
+  justify-content: space-between;
+  gap: 2rem;
+  width: 100%;
+}
+
+.font-size__span {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: var(--color-text-black-light);
+  font-size: 1.2rem;
+}
+
+.font-size__span-container {
+  position: relative;
+  border: 2px solid var(--color-text-black-light);
+  border-radius: 50%;
+  padding: 2rem;
+}
+
+.font-size__input {
   width: 100%;
 }
