--- a/src/components/ChangeFontColor.module.css
+++ b/src/components/ChangeFontColor.module.css
@@ -1,14 +1,34 @@
-.controls__font-color {
+.font-color {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 1em;
+  gap: 1rem;
   border: 1px solid var(--color-text-black-light);
   border-radius: 10px;
-  padding: 0.5em 1em;
-  margin-bottom: 1em;
+  padding: 1rem 1rem;
+  margin-bottom: 1rem;
+  min-height: 11rem;
+  box-shadow: -6px 6px 2px 0px var(--color-background-dark-hard);
 }
 
-.controls__label {
+.font-color__label {
   color: var(--color-text-black-light);
+}
+
+.font-color__input-container {
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  gap: 2rem;
+}
+
+.font-color__input-color {
+  width: 4rem;
+  height: 4rem;
+}
+
+.font-color__input-text {
+  width: 100%;
+  border: none;
+  border-radius: 10px;
 }
