--- a/src/components/ChangeFontSize.module.css
+++ b/src/components/ChangeFontSize.module.css
@@ -3,10 +3,12 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 2rem;
-  border: 1px solid var(--color-text-black-light);
+  border: 2px solid var(--color-text-black-light);
   border-radius: 10px;
   padding: 1rem 1.5rem;
   margin-bottom: 1rem;
+  min-height: 11rem;
+  box-shadow: -6px 6px 2px 0px var(--color-background-dark-hard);
 }
 
 .font-size__label {
@@ -31,7 +33,7 @@
 
 .font-size__span-container {
   position: relative;
-  border: 2px solid var(--color-text-black-light);
+  border: 3px solid var(--color-text-black-light);
   border-radius: 50%;
   padding: 2rem;
 }
