--- a/src/components/Controls/Controls.module.css
+++ b/src/components/Controls/Controls.module.css
@@ -1,6 +1,8 @@
 .controls__font {
+  display: flex;
+  flex-direction: column;
   gap: 1em;
-  max-height: 0;
+  /* max-height: 0; */
   overflow: hidden;
   transition: max-height 0.3s ease-out;
 }
