Add overflow scroll to workbench

--- a/src/components/Controls/Controls.module.css
+++ b/src/components/Controls/Controls.module.css
@@ -13,7 +13,8 @@
 .controls__content {
   /* max-height: 0; */
   display: none;
-  overflow: hidden;
+  /* overflow: hidden; */
+  /* overflow: auto; */
 }
 
 .show {
