--- a/src/components/Font/Font.module.css
+++ b/src/components/Font/Font.module.css
@@ -1,16 +1,16 @@
-.controls__font {
+.font {
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
 
-.controls__title {
+.font__title {
   display: flex;
   justify-content: space-between;
   cursor: pointer;
 }
 
-.controls__content {
+.font__content {
   /* max-height: 0; */
   display: none;
   /* overflow: hidden; */
