--- a/src/components/LeftSection/LeftSection.module.css
+++ b/src/components/LeftSection/LeftSection.module.css
@@ -1,16 +1,16 @@
 .left-section {
   display: flex;
-  flex-wrap: wrap;
-  align-content: flex-start;
-  gap: 1rem;
+  flex-direction: column;
   justify-content: space-evenly;
+  align-items: center;
+  gap: 1rem;
   padding: 2rem 4rem;
   height: 100%;
   background-color: var(--color-background-dark);
 }
 
 .left-section__button {
-  width: 8em;
+  width: 10rem;
   height: 2.6em;
   line-height: 2.5em;
   cursor: pointer;
@@ -20,4 +20,37 @@
   font-weight: 500;
   color: #560bad;
   transition: background-color 0.3s ease;
+}
+
+.left-section__button--two {
+  color: #fff;
+  background: #0d1127;
+  padding: 1rem 3rem 1rem 3rem;
+  border-radius: 5rem;
+  border: 5px solid #5978f3;
+  font-size: 1.2rem;
+  letter-spacing: 0.2rem;
+  cursor: pointer;
+}
+
+.left-section__button--three {
+  padding: 1rem 1rem;
+  letter-spacing: 0.5rem;
+  color: #fff;
+  border: 3px solid #ff0;
+  font-size: 14px;
+  position: relative;
+  background: transparent;
+  cursor: pointer;
+}
+
+.left-section__button--four {
+  padding: 1rem 1rem;
+  letter-spacing: 0.5rem;
+  color: #fff;
+  border: 3px solid #ff0;
+  font-size: 14px;
+  position: relative;
+  background: transparent;
+  cursor: pointer;
 }
