--- a/src/components/LeftSection/LeftSection.module.css
+++ b/src/components/LeftSection/LeftSection.module.css
@@ -1,9 +1,9 @@
 .left-section {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-items: center;
   align-items: center;
-  gap: 1rem;
+  align-content: space-evenly;
   padding: 2rem 4rem;
   height: 100%;
   background-color: var(--color-background-dark);
@@ -11,7 +11,7 @@
 
 .left-section__button {
   width: 10rem;
-  height: 2.6em;
+  height: 4rem;
   line-height: 2.5em;
   cursor: pointer;
   border: 2px solid #560bad;
@@ -53,4 +53,16 @@
   position: relative;
   background: transparent;
   cursor: pointer;
+}
+
+.left-section__button--five {
+  cursor: pointer;
+  background-color: #ff0000;
+  border-radius: 12px;
+  padding: 12px 20px;
+  font-weight: 600;
+  font-size: 16px;
+  color: #ffffff;
+  border: 2px solid #ffffff;
+  box-shadow: -7px 7px 0px 0px #c2c2c2;
 }
