--- a/src/components/LeftSection/LeftSection.module.css
+++ b/src/components/LeftSection/LeftSection.module.css
@@ -4,7 +4,7 @@
   justify-items: center;
   align-items: center;
   align-content: space-evenly;
-  padding: 2rem 4rem;
+  padding: 2rem 2rem;
   height: 100%;
   background-color: var(--color-background-dark);
 }
@@ -72,9 +72,33 @@
   background-color: #ff0000;
   border-radius: 0px;
   padding: 10px 20px;
-  font-weight: 500;
+  font-weight: 900;
   font-size: 16px;
   color: #050505;
   border: 4px solid #000000;
   box-shadow: -8px 7px 0px 0px #c2c2c2;
+}
+
+.left-section__button--seven {
+  cursor: pointer;
+  background-color: #99008c;
+  border-radius: 50px;
+  padding: 10px 20px;
+  font-weight: 900;
+  font-size: 16px;
+  color: #ffffff;
+  border: 4px solid #ffffff;
+  box-shadow: -2px 2px 7px 7px #c2c2c2;
+}
+
+.left-section__button--eight {
+  cursor: pointer;
+  background-color: #ffffff;
+  border-radius: 50px;
+  padding: 10px 20px;
+  font-weight: 100;
+  font-size: 16px;
+  color: #0f0f0f;
+  border: 1px solid #000000;
+  box-shadow: 0px 3px 0px 0px #c2c2c2;
 }
