--- a/src/components/LeftSection/LeftSection.module.css
+++ b/src/components/LeftSection/LeftSection.module.css
@@ -102,3 +102,27 @@
   border: 1px solid #000000;
   box-shadow: 0px 3px 0px 0px #c2c2c2;
 }
+
+.left-section__button--nine {
+  cursor: pointer;
+  background-color: #00ff2a;
+  border-radius: 9px;
+  padding: 10px 20px;
+  font-weight: 100;
+  font-size: 16px;
+  color: #050505;
+  border: 5px solid #ffffff;
+  box-shadow: 0px 6px 0px 0px #c2c2c2;
+}
+
+.left-section__button--ten {
+  cursor: pointer;
+  background-color: #d4ff00;
+  border-radius: 9px;
+  padding: 10px 20px;
+  font-weight: 900;
+  font-size: 16px;
+  color: #121212;
+  border: 5px solid #ffffff;
+  box-shadow: 0px 0px 14px 6px #d4ff00;
+}
