Update three and four button color

--- a/src/components/LeftSection/LeftSection.module.css
+++ b/src/components/LeftSection/LeftSection.module.css
@@ -36,7 +36,7 @@
 .left-section__button--three {
   padding: 1rem 1rem;
   letter-spacing: 0.5rem;
-  color: #fff;
+  color: #202020;
   border: 3px solid #ff0;
   font-size: 14px;
   position: relative;
@@ -47,7 +47,7 @@
 .left-section__button--four {
   padding: 1rem 1rem;
   letter-spacing: 0.5rem;
-  color: #fff;
+  color: #001100;
   border: 3px solid #ff0;
   font-size: 14px;
   position: relative;
