--- a/src/components/MidSection/Languages/Languages.module.css
+++ b/src/components/MidSection/Languages/Languages.module.css
@@ -2,21 +2,52 @@
   width: 100%;
   height: 50%;
   display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  gap: 2em;
-}
-
-.languages__button {
-  margin-bottom: 3em;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 3rem;
+  background-color: var(--color-background-dark);
 }
 
 .languages__css {
-  width: 6em;
-  height: 3em;
+  width: 16rem;
+  height: 8rem;
+  background: radial-gradient(at center, #9f71ce, #663399);
+  border-radius: 2rem 1rem 2rem 1rem;
+  cursor: pointer;
+  font-weight: 900;
+  font-size: 2rem;
+  color: var(--color-text-black);
+  border: none;
+  transition: all 0.3s ease-in-out;
+  transition: border-radius 0.3s ease-in-out;
 }
 
 .languages__html {
-  width: 6em;
-  height: 3em;
+  width: 16rem;
+  height: 8rem;
+  background: radial-gradient(at center, #eb7e54, #e34c26);
+  border-radius: 1rem 2rem 1rem 2rem;
+  cursor: pointer;
+  font-weight: 900;
+  font-size: 2rem;
+  color: var(--color-text-black);
+  border: none;
+  box-shadow: 0 0 0 0 #c8a2ff;
+  transition: all 0.3s ease-in-out;
+  transition: border-radius 0.3s ease-in-out;
+}
+
+.languages__html:active,
+.languages__css:active {
+  transform: scale(0.95);
+}
+
+.languages__css:hover {
+  border-radius: 2rem 2rem 2rem 2rem;
+  filter: brightness(90%);
+}
+
+.languages__html:hover {
+  border-radius: 2rem 2rem 2rem 2rem;
+  filter: brightness(90%);
 }
