--- a/src/components/WorkBench/WorkBench.module.css
+++ b/src/components/WorkBench/WorkBench.module.css
@@ -16,5 +16,5 @@
   color: var(--color-text-white);
   background-color: var(--color-background-dark);
   padding: 2rem;
-  overflow: scroll;
+  overflow: auto;
 }
