--- a/src/components/RightSection/Box/Components/Padding.module.css
+++ b/src/components/RightSection/Box/Components/Padding.module.css
@@ -23,19 +23,12 @@
 }
 
 .padding__span {
-  position: absolute;
+  /* position: absolute; */
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: var(--color-text-black-light);
   font-size: 1.2rem;
-}
-
-.padding__span-container {
-  position: relative;
-  border: 3px solid var(--color-text-black-light);
-  border-radius: 50%;
-  padding: 2rem;
 }
 
 .padding__input {
