--- a/src/components/RightSection/Box/Components/BoxShadow.module.css
+++ b/src/components/RightSection/Box/Components/BoxShadow.module.css
@@ -11,10 +11,55 @@
   box-shadow: -6px 6px 2px 0px var(--color-background-dark-hard);
 }
 
+.box-shadow__container {
+  width: 100%;
+}
+
 .box-shadow__input-container {
   display: flex;
   justify-content: space-between;
   gap: 2rem;
+  width: 100%;
+}
+
+.box-shadow__coordinates {
+  display: flex;
+  justify-content: space-between;
+  gap: 2rem;
+}
+
+/* GLOBALS */
+.box-shadow__span-container {
+  position: relative;
+  border: 3px solid var(--color-text-black-light);
+  border-radius: 50%;
+  padding: 2rem;
+}
+
+.box-shadow__span {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: var(--color-text-black-light);
+  font-size: 1.2rem;
+}
+
+/* BLUR */
+.box-shadow__blur {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.box-shadow__blur-container {
+  display: flex;
+  justify-content: space-between;
+  gap: 2rem;
+  width: 100%;
+}
+
+.box-shadow__input-blur {
   width: 100%;
 }
 
@@ -34,13 +79,6 @@
 
 .box-shadow__input-spread {
   width: 100%;
-}
-
-.box-shadow__span-container {
-  position: relative;
-  border: 3px solid var(--color-text-black-light);
-  border-radius: 50%;
-  padding: 2rem;
 }
 
 .box-shadow__span {
@@ -84,4 +122,10 @@
   padding-left: 3rem;
   color: var(--color-text-black-light);
   font-size: 1.4rem;
+}
+
+.box-shadow__span-container-two {
+  position: relative;
+  border-radius: 50%;
+  padding: 2rem;
 }
