--- a/src/components/WorkBench/WorkBench.module.css
+++ b/src/components/WorkBench/WorkBench.module.css
@@ -17,4 +17,5 @@
   background-color: var(--color-background-dark);
   padding: 2rem;
   overflow: auto;
+  border: 2px solid var(--color-background-white);
 }
