--- a/src/components/MidSection/Languages/Languages.module.css
+++ b/src/components/MidSection/Languages/Languages.module.css
@@ -1,4 +1,5 @@
 .languages {
+  position: relative;
   width: 100%;
   height: 50%;
   display: flex;
@@ -50,4 +51,20 @@
 .languages__html:hover {
   border-radius: 2rem 2rem 2rem 2rem;
   filter: brightness(90%);
+}
+
+.languages__textarea {
+  display: none;
+}
+
+.languages__copied {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: #333;
+  color: #fff;
+  padding: 0.25rem 0.5rem;
+  border-radius: 0.25rem;
+  font-size: 0.8rem;
+  pointer-events: none;
 }
