--- a/src/components/LeftSection/LeftSection.module.css
+++ b/src/components/LeftSection/LeftSection.module.css
@@ -6,7 +6,7 @@
   align-content: space-evenly;
   padding: 2rem 2rem;
   height: 100%;
-  /* background-color: var(--color-background-dark); */
+  background-color: var(--color-background-dark);
 }
 
 .left-section__button {
