--- a/src/components/MidSection/Languages/Languages.module.css
+++ b/src/components/MidSection/Languages/Languages.module.css
@@ -7,6 +7,7 @@
   align-items: center;
   gap: 3rem;
   background-color: var(--color-background-dark);
+  border: 2px solid var(--color-background-white);
 }
 
 .languages__css {
@@ -67,4 +68,8 @@
   border-radius: 0.25rem;
   font-size: 0.8rem;
   pointer-events: none;
+}
+
+.footer {
+  position: absolute;
 }
