--- a/src/components/RightSection/State/components/Brightness.module.css
+++ b/src/components/RightSection/State/components/Brightness.module.css
@@ -1,4 +1,4 @@
-.scale {
+.brightness {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -11,18 +11,18 @@
   box-shadow: -6px 6px 2px 0px var(--color-background-dark-hard);
 }
 
-.scale__label {
+.brightness__label {
   color: var(--color-text-black-light);
 }
 
-.scale__input-container {
+.brightness__input-container {
   display: flex;
   justify-content: space-between;
   gap: 2rem;
   width: 100%;
 }
 
-.scale__span {
+.brightness__span {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -31,13 +31,13 @@
   font-size: 1.2rem;
 }
 
-.scale__span-container {
+.brightness__span-container {
   position: relative;
   border: 3px solid var(--color-text-black-light);
   border-radius: 50%;
   padding: 2rem;
 }
 
-.scale__input {
+.brightness__input {
   width: 100%;
 }
