--- a/src/components/MidSection/Languages/Languages.module.css
+++ b/src/components/MidSection/Languages/Languages.module.css
@@ -61,12 +61,13 @@
 .languages__copied {
   position: absolute;
   top: 0;
-  right: 0;
-  background-color: #333;
-  color: #fff;
-  padding: 0.25rem 0.5rem;
+  left: 0;
+  background-color: var(--color-background-success);
+  color: var(--color-text-black);
+  padding: 0.7rem 3rem;
+  margin: 0.5rem;
   border-radius: 0.25rem;
-  font-size: 0.8rem;
+  font-size: 1.6rem;
   pointer-events: none;
 }
 
