--- a/src/components/LeftSection/LeftSection.module.css
+++ b/src/components/LeftSection/LeftSection.module.css
@@ -7,5 +7,6 @@
   padding: 2rem 2rem;
   height: 100%;
   background-color: var(--color-background-dark);
-  border: 2px solid var(--color-background-white);
+  /* border: 2px solid var(--color-background-white); */
+  border-radius: 0px 20px 0px 0px;
 }
