--- a/src/index.css
+++ b/src/index.css
@@ -65,3 +65,9 @@ li {
 input[type="range"] {
   accent-color: var(--color-background-blue);
 }
+
+hr {
+  border: none;
+  height: 1px;
+  background-color: var(--color-background-gray);
+}
