--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,7 @@ html {
   --color-background-dark-light: #383838;
   --color-background-blue: #0160e0;
   --color-background-success: #1de44b;
+  --color-background-transparent-black: #5a5a5a4e;
 
   /* FONT FAMILY */
   --font-system-ui: system-ui, Avenir, Helvetica, Arial, sans-serif;
